--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="mane">
-        <h1 class="head">Lakshmibai</h1>
+     <h1 class="head">Lakshmibai</h1>
         <q class="upperQuote">Queen of Jhansi</q>
         <section class="img">
             <p class="about"><q>I shall not surrender my Jhansi.</q></p>
-            <div class="img"><img src="Rani_of_jhansi.png" alt=""></div>
+            <div class="img"><img src="Rani_of_jhansi.jpg" alt=""></div>
         </section>
         <main>
             <h2>Biography</h2>
